tests/baselines/reference/innerAliases.errors.txt
innerAliases.ts(19,10): error TS2694: Namespace 'D' has no exported member 'inner'.
innerAliases.ts(21,11): error TS2339: Property 'inner' does not exist on type 'typeof D'.


==== innerAliases.ts (2 errors) ====
    module A {
        export module B {
            export module C {
                export class Class1 {}
            }
        }
    }
    
    module D {
        import inner = A.B.C; 
       
        var c1 = new inner.Class1(); 
    
        export module E { 
            export class Class2 {}
        }
    }
    
    var c: D.inner.Class1;
             ~~~~~
!!! error TS2694: Namespace 'D' has no exported member 'inner'.
    
    c = new D.inner.Class1();
              ~~~~~
!!! error TS2339: Property 'inner' does not exist on type 'typeof D'.
    
    